# trafficflow-belege-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0000_init.py  20260524_0001_payment_brand.py  20260525_0003_accountant.py  20260526_0004_routing_users.py  20260527_0005_due_date.py  20260528_0006_document_type.py  20260529_0007_bexio_sync.py  20260530_0008_brand_routes_skip_rules.py  20260531_0009_inbound_folders.py  20260601_0010_more_skip_rules.py  20260602_0011_more_skip_rules_2.py
backend/app/: __init__.py  config.py  main.py  schemas.py  seeds.py
backend/app/api/: auth.py  clients.py  connectors.py  dashboard.py  deploy.py  health.py  inbound_folders.py  mailboxes.py  org_routing.py  organizations.py  providers.py  receipts.py  review.py  sync_targets.py  upload.py  users.py
backend/app/core/: encryption.py  logging.py  pagination.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/services/: classifier.py  claude_extract.py  filename.py  imap_fetcher.py  local_extract.py  metadata_extract.py  multi_account.py  ocr.py  org_routing.py  payment_inference.py  pdf_renderer.py
backend/app/services/connectors/: __init__.py  base.py  bexio.py  local.py  onedrive.py
backend/app/services/inbound/: __init__.py  base.py  gdrive_share.py  local_mount.py  nextcloud_share.py  onedrive_share.py
backend/app/workers/: pipelines.py  tasks.py
backend/scripts/: ensure_local_model.sh
backend/tests/: test_filename.py  test_metadata.py
deploy/: Caddyfile
(+58 files in other folders)
