[project]
name = "belege-hub"
version = "0.1.0"
description = "Self-hosted receipt ingestion + classification system"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.13.3",
  "psycopg[binary,pool]>=3.2.3",
  "asyncpg>=0.30.0",
  "arq>=0.26.1",
  "redis>=5.2.0",
  "anthropic>=0.39.0",
  "playwright>=1.48.0",
  "aiosmtplib>=3.0.2",
  "aioimaplib>=2.0.1",
  "mail-parser>=4.1.0",
  "html2text>=2024.2.26",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "pypdf>=5.1.0",
  "pdfminer.six>=20240706",
  "Pillow>=11.0.0",
  "cryptography>=43.0.3",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "python-jose[cryptography]>=3.3.0",
  "pyotp>=2.9.0",
  "qrcode[pil]>=8.0",
  "python-multipart>=0.0.17",
  "httpx>=0.27.2",
  "msal>=1.31.0",
  "structlog>=24.4.0",
  "prometheus-client>=0.21.0",
  "python-dateutil>=2.9.0",
  "babel>=2.16.0",
  "tenacity>=9.0.0",
  "email-validator>=2.2.0",
  "rich>=13.9.4",
  "llama-cpp-python>=0.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.4",
  "mypy>=1.13.0",
  "httpx>=0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S"]
ignore = ["S101", "B008", "S104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
